--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,140 @@
 // CSFScopeAGGrid.jsx
-import React, { useState, useEffect, useMemo } from 'react';
+import React, { useState, useEffect, useMemo, forwardRef, useImperativeHandle } from 'react';
 import { AgGridReact } from 'ag-grid-react';
-import { AllCommunityModules } from 'ag-grid-community';
-import { Box } from '@mui/material';
+import { ModuleRegistry, AllCommunityModule } from 'ag-grid-community';
 import axios from 'axios';
-import WorkerNamesCellEditor from './WorkerNamesCellEditor';
+import { Box, Button, Dialog, DialogTitle, DialogContent, DialogActions, TextField, List, ListItem, ListItemIcon, Checkbox, ListItemText, CircularProgress, Snackbar, Alert } from '@mui/material';
+import 'ag-grid-community/dist/styles/ag-grid.css';
+import 'ag-grid-community/dist/styles/ag-theme-alpine.css';
 
+// Register the community module (per current docs using singular export)
+ModuleRegistry.registerModules([AllCommunityModule]);
+
+// ============================= WorkerNamesCellEditor =============================
+// This custom cell editor uses forwardRef so that AG Grid can call getValue() on it.
+// It opens a modal (dialog) to allow the user to enter first & last names,
+// search the WorkerInfo API, and select one or more names. When "Done" is clicked,
+// it returns the comma-separated names as the cell's new value.
+const WorkerNamesCellEditor = forwardRef((props, ref) => {
+  // props includes: value (current cell value), colDef, stopEditing(), etc.
+  const [open, setOpen] = useState(true);
+  const [firstName, setFirstName] = useState('');
+  const [lastName, setLastName] = useState('');
+  const [loading, setLoading] = useState(false);
+  const [results, setResults] = useState([]);
+  const [selected, setSelected] = useState([]);
+  const [snackbar, setSnackbar] = useState({ open: false, message: '', severity: 'error' });
+
+  // Expose getValue() method to AG Grid when editing is finished.
+  useImperativeHandle(ref, () => ({
+    getValue() {
+      return selected.join(', ');
+    }
+  }));
+
+  // Helper: sanitize input to remove dangerous characters.
+  const sanitizeInput = (str) => str.replace(/[<>]/g, '');
+
+  const searchWorkers = async () => {
+    if (!firstName.trim() || !lastName.trim()) {
+      setSnackbar({ open: true, message: 'Please enter both first and last names', severity: 'error' });
+      return;
+    }
+    setLoading(true);
+    try {
+      const response = await axios.get('/api/GetWorkerName', {
+        params: { FirstName: sanitizeInput(firstName.trim()), LastName: sanitizeInput(lastName.trim()) }
+      });
+      if (response.data.length === 0) {
+        setSnackbar({ open: true, message: 'No workers found', severity: 'error' });
+      }
+      const mapped = response.data.map(w => ({
+        label: w.NameFull,
+        jobTitle: w.JobTitle,
+        supervisor: w.SupervisorFullName
+      }));
+      setResults(mapped);
+    } catch (error) {
+      setSnackbar({ open: true, message: 'Error fetching workers', severity: 'error' });
+      setResults([]);
+    } finally {
+      setLoading(false);
+    }
+  };
+
+  const toggleSelect = (workerLabel) => {
+    if (selected.includes(workerLabel)) {
+      setSelected(selected.filter(x => x !== workerLabel));
+    } else {
+      setSelected([...selected, workerLabel]);
+    }
+  };
+
+  const handleDone = () => {
+    setOpen(false);
+    // Call stopEditing to commit the value (AG Grid will then call getValue()).
+    props.stopEditing();
+  };
+
+  return (
+    <Dialog open={open} onClose={() => props.stopEditing()} fullWidth maxWidth="sm">
+      <DialogTitle>Edit {props.colDef.header}</DialogTitle>
+      <DialogContent>
+        <TextField
+          label="First Name"
+          value={firstName}
+          onChange={e => setFirstName(e.target.value)}
+          fullWidth
+          margin="normal"
+        />
+        <TextField
+          label="Last Name"
+          value={lastName}
+          onChange={e => setLastName(e.target.value)}
+          fullWidth
+          margin="normal"
+        />
+        <Button onClick={searchWorkers} variant="contained" disabled={loading} sx={{ mt: 1 }}>
+          {loading ? <CircularProgress size={20} /> : "Search"}
+        </Button>
+        {results.length > 0 && (
+          <Box sx={{ mt: 2 }}>
+            <List>
+              {results.map(worker => (
+                <ListItem key={worker.label} button onClick={() => toggleSelect(worker.label)}>
+                  <ListItemIcon>
+                    <Checkbox checked={selected.includes(worker.label)} />
+                  </ListItemIcon>
+                  <ListItemText primary={worker.label} secondary={`Job: ${worker.jobTitle} | Supervisor: ${worker.supervisor}`} />
+                </ListItem>
+              ))}
+            </List>
+          </Box>
+        )}
+      </DialogContent>
+      <DialogActions>
+        <Button onClick={() => props.stopEditing()}>Cancel</Button>
+        <Button onClick={handleDone} variant="contained">Done</Button>
+      </DialogActions>
+      <Snackbar
+        open={snackbar.open}
+        autoHideDuration={4000}
+        onClose={() => setSnackbar({ ...snackbar, open: false })}
+      >
+        <Alert onClose={() => setSnackbar({ ...snackbar, open: false })} severity={snackbar.severity}>
+          {snackbar.message}
+        </Alert>
+      </Snackbar>
+    </Dialog>
+  );
+});
+WorkerNamesCellEditor.displayName = 'WorkerNamesCellEditor';
+
+// ============================= Main Component =============================
 const CSFScopeAGGrid = () => {
   const [rowData, setRowData] = useState([]);
 
-  // Fetch and group ScopeData (Level 1: subcategories)
+  // Fetch ScopeData and group by subcategoryId (Level 1: Subcategories)
   useEffect(() => {
     const fetchData = async () => {
       try {
@@ -35,6 +160,7 @@ const CSFScopeAGGrid = () => {
     fetchData();
   }, []);
 
+  // Master grid column definitions (Level 1)
   const columnDefs = useMemo(() => [
     { headerName: "Subcategory", field: "subcategoryName", filter: 'agSetColumnFilter' },
     { headerName: "Description", field: "subcategoryDescription" },
@@ -92,6 +218,7 @@ const CSFScopeAGGrid = () => {
     workerNamesCellEditor: WorkerNamesCellEditor
   }), []);
 
+  // Detail cell renderer params for the master/detail grid
   const detailCellRendererParams = {
     detailGridOptions: {
       columnDefs: detailColumnDefs,
@@ -102,26 +229,25 @@ const CSFScopeAGGrid = () => {
       },
       frameworkComponents: frameworkComponents,
       onCellValueChanged: (params) => {
-        console.log('Cell value changed in detail grid', params);
+        console.log('Detail grid cell value changed', params);
       }
     },
     getDetailRowData: (params) => {
-      // Pass the businessUnits array for this subcategory.
       params.successCallback(params.data.businessUnits);
     }
   };
 
   return (
-    <div className="ag-theme-alpine" style={{ height: "600px", width: "100%" }}>
+    <Box className="ag-theme-alpine" style={{ height: "600px", width: "100%" }}>
       <AgGridReact
         rowData={rowData}
         columnDefs={columnDefs}
         masterDetail={true}
         detailCellRendererParams={detailCellRendererParams}
-        modules={AllCommunityModules}
+        modules={[AllCommunityModule]}
         onGridReady={params => params.api.sizeColumnsToFit()}
       />
-    </div>
+    </Box>
   );
 };
 
